# topo-sonify

./: .gitignore  CLAUDE.md  Cargo.toml  DEVNOTES.md  METHODOLOGY.md
.github/workflows/: ci.yml  pages.yml
docs/: 01-simplicial-complexes.html  02-homology.html  03-persistent-homology.html  04-sonification-mapping.html  05-storyboard.html  LITERATURE-GROUNDING.md  RESEARCH-HANDOFF.md  index.html
examples/: ch1_simplicial_complexes.rs  ch2_homology.rs  ch3_persistence.rs
lessons/: 01-points.html  02-connections.html  03-loops.html  04-persistence.html  05-curvature.html  06-playground.html  index.html  shared.css
src/: lib.rs
src/audio/: effects.rs  filter.rs  mod.rs  oscillator.rs
src/instruments/: betti_drone.rs  mod.rs  morse_synth.rs  simplicial_pluck.rs
src/mapping/: mod.rs  sonifier.rs
src/topology/: complex.rs  distances.rs  filtration.rs  hodge.rs  homology.rs  mod.rs  morse.rs  persistence.rs  simplex.rs  standard_persistence.rs
web/: index.html
