[package]
name = "topo-sonify"
version = "0.1.0"
edition = "2021"
description = "Topology-first sonification engine — simplicial complexes become sound"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
    "OscillatorNode",
    "OscillatorType",
    "GainNode",
    "BiquadFilterNode",
    "BiquadFilterType",
    "DelayNode",
    "ConvolverNode",
    "DynamicsCompressorNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AnalyserNode",
    "AudioWorklet",
    "AudioWorkletNode",
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
]

[profile.release]
opt-level = "s"
lto = true
